kdegames (4:4.6.1-0r1) UNRELEASED; urgency=low

  * New upstream release
  * Update installed files.

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.1.
  * Bump kdelibs5-dev build dependency to >= 4:4.6.
  * Update symbols file.
  * Bump S-V to 3.9.1; update Replaces/Breaks/Conflicts.

  [ Pino Toscano ]
  * Make palapeli recommend qhull-bin as it contains `qvoronoi', optionally
    used to generate irregular grid puzzles.
  * Update lintian overrides.
  * Remove article from short description.

 -- Modestas Vainius <modax@debian.org>  Mon, 26 Jul 2010 23:24:35 +0300

kdegames (4:4.4.5-1) unstable; urgency=low

  * New upstream release.

  [ Pino Toscano ]
  * Remove all the leftovers of kbackgammon and ksirtet.

  [ Modestas Vainius ]
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ Sune Vuorela ]
  * Update descriptions
    - add a s to contain. Closes: 587594
  * Change email address

 -- Sune Vuorela <sune@debian.org>  Sun, 18 Jul 2010 10:07:47 +0200

kdegames (4:4.4.4-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Do not fail if there are missing symbols. libkdegames5 is not important
    enough to warrant such a FTBFS.
  * Bump pkg-kde-tools build dependency to (>= 0.9) for HTML_INSTALL_DIR
    switch and 3.0 (quilt) source format support.
  * Switch to 3.0 (quilt) source package format and original tar.bz2
    tarballs.
  * Replace usr/share/doc/kde4 references with usr/share/doc/kde.
  * Drop quilt from Build-Depends, no longer needed for 3.0 (quilt).
  * Remove debian/README.source. Patch support is part of source format
    now.
  * Move debian/source.lintian-overrides to debian/source/lintian-overrides.
  * Bump kde-sc-dev-latest build dependency to 4:4.4.4.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 01 Jun 2010 01:15:15 +0300
