@@ -5,6 +5,7 @@ kdegames (4:4.6.1-0r1) UNRELEASED; urgency=low
 
   [ Modestas Vainius ]
   * Point debian/control Vcs fields to the new Git repository.
+  * Switch debian/rules engine to dhmk based qt-kde-team/2/*.
 
   [ José Manuel Santamaría Lema ]
   * Bump kde-sc-dev-latest build dependency to 4:4.6.1.
